[package]
name = "uarc-emu"
version = "0.0.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]

[lib]
name = "uarc_emu"
path = "src/lib.rs"

[[bin]]
name = "uarc-emu"
path = "src/main.rs"

[dependencies]
itertools = "0.4.11"
num = "0.1.31"
crossbeam = "0.2.8"
nue = "0.3.0"
oncemutex = "0.1.1"
chan = "0.1.17"
